# smithay-wallpaper

./: Cargo.toml
examples/: integrate.rs
src/: lib.rs  tools.rs
src/rendering/: mod.rs
